--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,12 @@
 ##
 ## Get latest from https://github.com/github/gitignore/blob/main/VisualStudio.gitignore
 
+# LEviathan Game Engine related
+build/
+out/build/
+third_party/
+libs/
+
 # User-specific files
 *.rsuser
 *.suo
